# HimmelWacht

./: .gitignore  .gitmodules  README.md  inference.py
AI_cpp_impl/: README.md
cad/: README.md  geschuetz_arm_final.stl  platform.stl  weight.20250410-214034.FCBak
cad/FreeCAD/: esp-case-pi5-case-bottom.stl  ina226.FCStd  platform.FCStd  pololu.FCStd  powerplate-top.FCStd  powerplate.FCStd  servo-trigger.FCStd  shoulder.FCStd  speaker-plate.FCStd  weight.FCStd  xy-mos-holder.FCStd
cad/imports/: ESP32-case-breakout-board.stl  import_gyro_mount.stl  import_left_mag.stl  import_motor_mount.stl  import_pi5_case_bottom.stl  import_right_mag.stl  import_xy_mos_holder.stl  pi5-case-bottom.3mf
cad/output/: weight.stl  (+16 more)
cpp_impl/: CmakeLists.txt  inference.cpp
documents/: HimmelWacht-GANTT_v1.1.xlsx  Teileliste.xlsx  driving_map.drawio
ds4MacChange/: README.md  settings.ini
esp/: README.md
esp/HimmelWachtEsp32/components/interfaces/diff-drive/: CMakeLists.txt  diff-drive.c
esp/HimmelWachtEsp32/components/interfaces/diff-drive/include/: diff-drive.h
esp/HimmelWachtEsp32/components/interfaces/vehicle-control/: CMakeLists.txt  vehicle-control.c
esp/HimmelWachtEsp32/components/interfaces/vehicle-control/include/: vehicle-control.h
html_server/: README.md  html_daemon.py  index.html
laboratory_computer/: README.md
models/: README.md
raspberry/: README.md
source/: gyro.cpp  gyro_kalman.cpp  gyro_plot.py  kalman.cpp  kalman.h
util/: README.md
webRTC-Stream/: README.md  mediamtx_receiver.py  receiver.py  sender.py  setup.bat
webRTC_inference/: README.md
(+175 files in other folders)
